BREAKING - Change config to json